# ChernoOpenGL

./: CMakeLists.txt  indexbuffer.cpp  indexbuffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexbufferlayout.h
assets/shaders/: Basic.shader
tests/: test.cpp  test.h  testclearcolor.cpp  testclearcolor.h  testtexture2d.cpp  testtexture2d.h
